Fix edit collapse

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,7 +28,7 @@
     opacity: 0;
 }
 
-.selected:not(.edit-mode) .activity__card {
+.selected .activity__card {
     border-color: var(--bs-primary) !important;
     background-color: var(--bs-primary-bg-subtle) !important;
 }
